fixed table column wrapping for host details page

--- a/frontend/pages/hosts/HostDetailsPage/_styles.scss
+++ b/frontend/pages/hosts/HostDetailsPage/_styles.scss
@@ -337,7 +337,7 @@
   tbody {
     td {
       padding: 12px 27px;
-      white-space: nowrap;
+      white-space: normal !important;
     }
   }
 
